Prevent overflow

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -48,7 +48,7 @@ button:active {
 }
 
 .content {
-  height: 100%;;
+  height: 100%;
   display: grid;
   grid-template-rows: 100px 1fr;
   grid-template-columns: 200px 1fr;
@@ -80,6 +80,7 @@ button:active {
 
 .table {
   padding: var(--pdg-h);
+  overflow: hidden;
 }
 
 .card {
@@ -93,8 +94,17 @@ button:active {
   align-items: center;
 }
 
+.card h4 {
+  white-space: nowrap;
+  overflow: auto;
+}
+
+.tick {
+  padding: 0;
+}
+
 .modal {
-  display: grid; /* Hidden by default */
+  display: none; /* Hidden by default */
   place-items: center;
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
@@ -115,6 +125,13 @@ form {
   background-color: var(--main-color);
   padding: calc(3 * var(--pdg-v));
   border-radius: 10px;
+  position: relative;
+}
+
+.close-button {
+  position: absolute;
+  top: var(--pdg-v);
+  right: var(--pdg-v);
 }
 
 input, textarea {
@@ -163,3 +180,15 @@ textarea {
 }
 
 
+@media screen and (max-width: 600px) {
+  :root {
+    --mrg: 1rem;
+    --pdg-v: 0.1rem;
+    --pdg-h: 0.2rem;
+  }
+
+  .content {
+    grid-template-rows: 100px 1fr;
+    grid-template-columns: 100px 1fr;
+  }
+}
